--- a/src/main/resources/templates/show_employee.html
+++ b/src/main/resources/templates/show_employee.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +7,10 @@
 </head>
 <body>
     <div class="container">
-        <h3>Employee Information</h3>
-        Name: <span th:text="${employeeAtributtes.fullname}"></span>
+        <h3>Informacion del empleado</h3>
+        Nombre: <span th:text="${employeeAtributtes.fullname}" />
         <br/>
-        Email: <span th:text="${employeeAtributtes.user_email}"></span>
+        Correo: <span th:text="${employeeAtributtes.user_email}" />
     </div>
 </body>
 </html>
