--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -18,6 +18,13 @@
             <tr th:each="employee : ${employeeListAttribute}">
                 <td th:text="${employee.fullname}"></td>
                 <td th:text="${employee.user_email}"></td>
+                <td>
+                    <form th:action="@{/editEmployee(employee.id)}"method="post"
+                        <button type="submit" >Editar</button>
+                    </form> 
+                    <form th:action="@{/deleteEmployee(employee.id)}" method="post"
+                        <button type="submit" >Eliminar</button>
+                    </form>
             </tr>
         </tbody>
     </table>
